Updated README file

--- a/README
+++ b/README
@@ -2,3 +2,5 @@ Elementary Math Quizzes
 =======================
 
 A few simple, commandline-based math quizzes for kids in the first years of primary education.
+
+You're gonna need Ruby to run these scripts.
